api/css/style.css
body
{
	font-size: 20px;
	margin-top: 1%;
	word-wrap: break-word;
}

h1
{
	font-weight: bold;
}

h2
{
	font-weight: bold;
}

h3
{
	font-size: 40px;
}

h4
{
	font-size: 25px;
	font-weight: bold;
}

.font-courier-prime
{
	font-family: "Courier Prime";
}

.font-zilla-slab
{
	font-family: "Zilla Slab";
}

.font-open-sans
{
	font-family: "Open Sans";
}

.font-18
{
	font-size: 18px;
}

.font-bold
{
	font-weight: bold;
}

.margin-top-10
{
	margin-top: 10%;
}

.search-result
{
	padding-top: 3%;
}

.api-container
{
	margin-left: 5%;
	margin-right: 5%;
}

.bhom-red
{
	color: #FE224A;
}

.bhom-black
{
	color: #211218;
}

.container
{
	margin-left: 5%;
	margin-right: 5%;
}

.main-logo
{
	width: 10%;
	margin-top: 20%;
}

.margin-top-0
{
	margin-top: 0%;
}

.top-right-logo
{
	width: 20%;
	margin-right: -35%;
	margin-top: 3%;
}

.main-search-bar
{
	margin-top: 10%;
}

.main-search-buttons
{
	margin-top: 5%;
	margin-left: -30px;
	margin-right: -30px;
}

.search-btn
{
	background-color: #FE224A;
	padding-left: 10%;
	padding-right: 10%;
	font-weight: bold;
	border: 3px solid;
	border-color: #FE224A;
	margin-right: -15px;
	height: 40px;
	width: calc(100% + 7px);
}

.search-btn:hover, .search-btn:active, .search-btn:focus, .btn-success:active:focus
{
	background-color: #000000;
	border-color: #000000;
}

.surprise-btn
{
	background-color: #FFFFFF;
	padding-left: 10%;
	padding-right: 10%;
	border-color: #FE224A;
	color: #FE224A;
	font-weight: bold;
	border: 3px solid;
	height: 40px;
}

.form-control
{
	border-radius: 0px;
}

.surprise-btn:hover, .surprise-btn:active, .surprise-btn:focus, .btn-info:active:focus
{
	background-color: #000000;
	border-color: #000000;
}

.table
{
	border: 1px solid black;
	padding: 3%;
}

.table-header
{
	font-weight: bold;
}

.table-row
{
	display: flex;
	width: 100%;
	margin-bottom: 1%;
	margin-top: 1%;
	background-color: #E6E6E6;
}

.method-input-table-header
{
	font-weight: bold;
}

.table-sub-row
{
	border-bottom: 1px solid #999999;
	padding: 1%;
}

.method-data-header
{
	font-weight: bold;
}

.can-click
{
 	cursor: pointer;
}

.fa-plus-circle
{
	color: #FE224A;
	padding-right: 10px;
}

.fa-times-circle
{
	padding-right: 10px;
}

.menu-sidebar
{
	height: 100vh;
	border-right: 5px dotted;
	border-color: #FE224A;
}

.menu-sidebar-100
{
	height: 100%;
}

.content-left-border
{
	border-left: 5px dotted;
	border-color: #FE224A;
	height: 100%;
}

.object-name
{
	font-weight: bold;
	background-color: #FFD700;
}

.object-description
{
	background-color: #FFD700;
}

.table-cell
{
	flex: 1;
}

.table-cell-inner
{
	/*background-color: #F6F6F6;*/
	flex: 1;
}

.table-inner-margin
{
	margin-top: 1%;
}

.level-5-indent
{
	padding-left: 5%;
}

.level-4-indent
{
	padding-left: 4%;
}

.method-table-cell
{
	padding: 1%;
	margin-bottom: 1%;
	padding-left: 5%;
}

.method-table-header-cell
{
	padding: 1%;
}

.method-input-row
{
	padding-top: 1%;
}

.navigation-item
{
	padding-left: 17%;
	font-size: 20px;
}

.lg-background
{
	background-color: #F6F6F6;
}

.dg-background
{
	background-color: #E6E6E6;
}

.margin-top-3
{
	margin-top: 3%;
}

.margin-top-1
{
	margin-top: 1%;
}

.main-search:focus
{
	border-color: #A6A6A6;
}

.main-search
{
	height: 40px;
	font-family: "Zilla Slab";
	font-weight: bold;
	font-size: 18px;
}

